--- a/eurekaclientconsumer/src/main/resources/application.properties
+++ b/eurekaclientconsumer/src/main/resources/application.properties
@@ -5,5 +5,5 @@ eureka.instance.hostname=localhost
 eureka.client.fetch-registry=true
 #指定是否要注册到注册中心
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8763/eureka/
-#eureka.client.service-url.defaultZone=http://server1:8001/eureka/,http://server2:8002/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8763/eureka/
+eureka.client.service-url.defaultZone=http://server1:8001/eureka/,http://server2:8002/eureka/
